philly-311-citywide-meta/src/objects/Directory__c.object
<CustomObject>
    <description>An import of the city&apos;s staff and department directory.</description>
    <fields>
        <fullName>Bold__c</fullName>
        <label>Bold</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Link__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/500/e?isdtp%3Dvw&amp;ekp=500&amp;ent=Case&amp;RecordType=012J000000095Wk&amp;x311rt=Directory_Assistance_IR&amp;dirSR=Directory%20Assistance%20-%20IR&amp;dirId=&quot;&amp; Id&amp;&quot;&amp;cas14=&quot; &amp; SUBSTITUTE(Name, &apos; &apos;, &apos;%20&apos;) &amp; &quot;&apos;); } &quot;+&quot;else {parent.location.href=&apos;/500/e?ekp=500&amp;ent=Case&amp;RecordType=012J000000095Wk&amp;x311rt=Directory_Assistance_IR&amp;dirSR=Directory%20Assistance%20-%20IR&amp;dirId=&quot;&amp; Id&amp;&quot;&amp;cas14=&quot; &amp; SUBSTITUTE(Name, &apos; &apos;, &apos;%20&apos;) &amp; &quot;&apos;;}&quot;,&quot;Create Case&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <label>Department Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitCode__c</fullName>
        <label>Unit Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Directory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>